--- a/lectures/pag/css/styles.css
+++ b/lectures/pag/css/styles.css
@@ -95,9 +95,25 @@ body {
     margin-top: -30px;
 }
 
+/* HOME PAGE */
 .container .jumbotron{
     box-shadow: 0 0 50px #3F0C1F;
     border: 2px solid #3F0C1F;
+}
+
+#menu-tile, #specials-tile, #map-tile {
+    height: 250px;
+    /* Del container */
+    width: 100%;
+    margin-bottom: 15px;
+    /* No mueve nada a ningun lado, pero el resto de los hijitos de estos tipos se pueden posicionar relativos al mismo */
+    position: relative;
+    border: 2px solid #3F0C1F;
+    overflow: hidden;
+}
+
+#menu-tile:hover, #specials-tile:hover, #map-tile:hover {
+    box-shadow: 0 1px 5px 1px #cccccc;
 }
 
 /* Large devices */
