--- a/lectures/pag/css/styles.css
+++ b/lectures/pag/css/styles.css
@@ -112,8 +112,32 @@ body {
     overflow: hidden;
 }
 
+
 #menu-tile:hover, #specials-tile:hover, #map-tile:hover {
     box-shadow: 0 1px 5px 1px #cccccc;
+}
+
+#menu-tile {
+    background: url('../images/menu-tile.jpg') no-repeat;
+    background-position: center;
+}
+
+#specials-tile {
+    background: url('../images/specials-tile.jpg') no-repeat;
+    background-position: center;
+}
+
+#menu-tile span, #specials-tile span, #map-tile span {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    width: 100%;
+    text-align: center;
+    font-size: 1.6em;
+    text-transform: uppercase;
+    background-color: #000;
+    color: #fff;
+    opacity: .8;
 }
 
 /* Large devices */
@@ -200,4 +224,8 @@ body {
 
     }
 
+    #menu-tile, #specials-tile {
+        width: 360px;
+        margin: 0 auto 15px;
+    }
 }
