--- a/lectures/pag/css/styles.css
+++ b/lectures/pag/css/styles.css
@@ -229,3 +229,16 @@ body {
         margin: 0 auto 15px;
     }
 }
+
+/* XXXS devices */
+@media (max-width:479px) {
+    #menu-tile, #specials-tile {
+        width: 280px;
+        margin: 0 auto 15px;
+    }
+    .navbar-brand h1 {
+        padding-top: 5px;
+        font-size: 6vw;
+        /* relative units to viewport, responsive */
+    }
+}
