--- a/lectures/pag/css/styles.css
+++ b/lectures/pag/css/styles.css
@@ -217,6 +217,7 @@ body {
 
 /* XS devices */
 @media (max-width:767px) {
+    /* Header */
     .navbar-brand {
         padding-top: 10px;
         height: 80px;
@@ -263,7 +264,21 @@ body {
         letter-spacing: .1em;
         text-transform: uppercase;
     }
+    /* end header */
 
+    /* footer */
+    .panel-footer section{
+        margin-bottom: 30px;
+        text-align: center;
+    }
+    .panel-footer section:nth-child(3){
+        margin-bottom: 0;
+    }
+    .panel-footer section hr {
+        width: 50%;
+    }
+
+    /* home page */
     .container .jumbotron {
         margin-top: 30px;
         padding: 0;
@@ -275,6 +290,8 @@ body {
         width: 360px;
         margin: 0 auto 15px;
     }
+
+
 }
 
 /* XXXS devices */
