--- a/lectures/pag/css/styles.css
+++ b/lectures/pag/css/styles.css
@@ -62,7 +62,7 @@ body {
 }
 
 #nav-list a:hover {
-    font-size: 1.8em;
+    font-size: 1.0em;
 }
 
 #nav-list a span {
@@ -217,6 +217,62 @@ body {
 /* El siguiente hermano div de title */
 #menu-categories-title+div {
     margin-bottom: 50px;
+}
+
+/* Fin de menu categories page */
+
+/* inicio de single category page */
+
+.menu-item-tile{
+    margin-bottom: 25px;
+}
+
+.menu-item-tile hr {
+    width: 80%;
+}
+
+.menu-item-tile .menu-item-price {
+    font-size: 1.1 em;
+    text-align: right;
+    margin-top: -15px;
+    margin-right: -15px;
+}
+
+.menu-item-tile .menu-item-price span {
+    font-size: .6em;
+}
+
+.menu-item-photo{
+    position: relative;
+    border: 2px solid #3F0C1F;
+    overflow: hidden;
+    padding: 0;
+    margin-right: -15px;
+    margin-left: auto;
+    margin-bottom: 20px;
+    max-width: 250px;
+}
+
+.menu-item-photo div {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    width: 80px;
+    background-color: #557c3e;
+    text-align: center;
+}
+
+.menu-item-description {
+    padding-right: 30px;
+}
+
+h3.menu-item-title {
+    margin: 0 0 10px;
+}
+
+.menu-item-details {
+    font-size: .9em;
+    font-style: italic;
 }
 
 /* Large devices */
